# comfygit-manager

./: .gitattributes  .gitignore  .venv  AGENTS.md  CLAUDE.md  README.md  __init__.py  browserflow.yaml  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.claude/: .gitignore
.github/workflows/: ci.yml  publish.yml
dev/docker/: Dockerfile  README.md  docker-compose.yml  start-stack.sh
docs/: huggingface-hub-guide.md  spec-driven-development.md
docs/architecture/: service-boundaries.md
docs/contracts/: README.md
docs/deltas/: modal-system-cleanup.md
docs/reference/: legacy-beads-audit.md
docs/specs/: README.md  cloud-linking-and-publication.md  environment-lifecycle-and-orchestrator.md  environment-readiness.md  graph-integration-and-selection.md  (+6 more)
e2e/: .gitignore  global-setup.ts  global-teardown.ts
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
harness/: browser.sh  comfyui.sh  ports.sh  workspace.sh
js/: comfygit-manager.js  comfygit-panel.css  comfygit-panel.js
scripts/: README.md  check-frontend-version.sh  comfygit-worktree.sh  compare-api-prompts.mjs  install-hooks.sh  prepare-ci-core-source.py  setup-dev-env  start-dev-container  strip-dev-sources.py  test-local-core
server/: comfygit_panel.py  comfygit_server.py  orchestrator.py  panel_environment_logger.py  panel_logging_config.py  workflow_file_watcher.py
specs/: panel-navigation.yaml
testing/: QUICK_REFERENCE.md  README.md  conftest.py  pyproject.toml
tests/: api_discovery.py  pyproject.toml  ws_monitor.py
(+247 files in other folders)
