[project]
name = "comfygit-manager"
version = "0.1.3"
description = "ComfyGit Manager - Node for managing comfygit environments in ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comfygit==0.4.2",
    "comfygit-core==0.4.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "watchdog>=6.0.0",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-aiohttp>=1.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "tomlkit>=0.12.0",
]

[project.urls]
Repository = "https://github.com/comfygit-ai/comfygit-manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akatz"
DisplayName = "comfygit-manager"
Icon = "https://github.com/comfygit-ai.png"
